# internal/mailmatch/api/router.go
@@ -1,0 +1,9 @@
+package api
+
+import "github.com/gin-gonic/gin"
+
+func RegisterRoutes(rg *gin.RouterGroup, mod *Module) {
+	h := NewHandler(mod)
+
+	rg.GET("/pickup", h.GetPickupMessages)
+}
